# SGit-AI__CLI

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-test.txt
.claude/agents/: architect.md
.github/workflows/: ci-pipeline.yml  ci-pipeline__dev.yml  ci-pipeline__main.yml  tests.yml
_to_review/git-reader-implementation/: git_reader_README.md
docker/: Dockerfile  setup-sgit-docker.sh
sg_send_cli/: __init__.py  __main__.py
sg_send_cli/api/: API__Transfer.py  Vault__API.py  Vault__API__In_Memory.py
sg_send_cli/cli/: CLI__Credential_Store.py  CLI__Debug_Log.py  CLI__Main.py  CLI__PKI.py  CLI__Progress.py  CLI__Token_Store.py  CLI__Vault.py  __init__.py
sg_send_cli/crypto/: Vault__Crypto.py  Vault__Key_Manager.py
sg_send_cli/objects/: Vault__Commit.py  Vault__Inspector.py  Vault__Object_Store.py  Vault__Ref_Manager.py
sg_send_cli/safe_types/: Safe_Str__Access_Token.py  Safe_Str__Index_Id.py  Safe_Str__Key_Id.py  Safe_Str__Ref_Id.py  Safe_Str__SHA256.py  Safe_Str__Vault_Id.py  Safe_Str__Vault_Key.py  Safe_Str__Vault_Name.py  Safe_Str__Vault_Passphrase.py  Safe_UInt__Vault_Version.py
sg_send_cli/schemas/: Schema__Batch_Operation.py  Schema__Branch_Index.py  Schema__Change_Pack.py  Schema__Object_Commit.py  Schema__Object_Tree.py  Schema__Object_Tree_Entry.py  Schema__PKI_Key_Pair.py  Schema__PKI_Public_Key.py  Schema__Transfer_File.py  Schema__Vault_Config.py  Schema__Vault_Index.py  Schema__Vault_Index_Entry.py  Schema__Vault_Meta.py
sg_send_cli/sync/: Vault__Bare.py  Vault__Batch.py  Vault__Branch_Manager.py  Vault__Change_Pack.py  Vault__Components.py  Vault__Fetch.py  Vault__GC.py  Vault__Merge.py  Vault__Storage.py  Vault__Sub_Tree.py  Vault__Sync.py
sgit_ai/: __init__.py  __main__.py
sgit_ai/api/: API__Transfer.py  Transfer__Envelope.py  Vault__API.py  Vault__API__In_Memory.py  Vault__Backend__API.py  Vault__Backend__Local.py
sgit_ai/cli/: CLI__Branch.py  CLI__Create.py  CLI__Credential_Store.py  CLI__Debug_Log.py  CLI__Diff.py  CLI__Doctor.py  CLI__Dump.py  CLI__Export.py  CLI__Input.py  CLI__Main.py  CLI__Merge.py  CLI__Migrate.py  CLI__PKI.py  CLI__Progress.py  CLI__Publish.py  CLI__Revert.py  CLI__Share.py  CLI__Stash.py  CLI__Token_Store.py  CLI__Vault.py  __init__.py  _helpers.py
sgit_ai/core/: Vault__Bare.py  Vault__Components.py  Vault__Context.py  Vault__Errors.py  Vault__Ignore.py  Vault__Remote_Manager.py  Vault__Sync.py  Vault__Sync__Base.py
sgit_ai/crypto/: Vault__Crypto.py  Vault__Key_Manager.py
sgit_ai/migrations/: Migration.py  Migration__Registry.py  Migration__Runner.py
sgit_ai/objects/: Vault__Commit.py  Vault__Inspector.py  Vault__Object_Store.py
sgit_ai/safe_types/: Enum__Clone_Mode.py  Enum__Doctor_Status.py  Enum__Local_Config_Mode.py  Enum__Step_Status.py  Enum__Sync_State.py  Enum__Transaction_Log_Mode.py  Enum__Workflow_Status.py  Safe_Str__App_Version.py  Safe_Str__Backup_Label.py  Safe_Str__Commit_Id.py  Safe_Str__Commit_Message.py  Safe_Str__Diff_Mode.py  Safe_Str__Diff_Text.py  Safe_Str__Doctor_Message.py  (+18 more)
site/: index.html
tests/: conftest.py
(+911 files in other folders)
