[tool.poetry]
name        = "sgit-ai"
version     = "v0.9.4"
description = "CLI tool for syncing encrypted vaults with SGit-AI"
readme      = "README.md"
license     = "Apache-2.0"
authors     = ["The Cyber Boardroom"]
keywords    = ["sgit", "sgit-ai", "vault", "encryption", "cli", "sync"]
homepage    = "https://github.com/SGit-AI/SGit-AI__CLI"
repository  = "https://github.com/SGit-AI/SGit-AI__CLI"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
packages = [{ include = "sgit_ai" }]

[tool.poetry.dependencies]
python       = ">=3.11"
osbot-utils  = ">=3.70.0"
cryptography = ">=43.0.0"

[tool.poetry.group.dev.dependencies]
pytest     = ">=8.0"
pytest-cov = ">=5.0"

[tool.poetry.scripts]
sgit-ai = "sgit_ai.cli:main"
sgit    = "sgit_ai.cli:main"

[build-system]
requires      = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths        = ["tests"]
addopts          = "-v --tb=short --ignore=tests/qa"
python_files     = "test_*.py"
python_classes   = "Test_*"
python_functions = "test_*"

[tool.coverage.run]
source = ["sgit_ai"]
omit   = ["tests/*"]

[tool.coverage.report]
show_missing = true